<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:padding="20dp"
    android:background="@color/font1_color">


    <ImageView
        android:id="@+id/img_logo_app"
        android:layout_width="176dp"
        android:layout_height="105dp"
        android:contentDescription="@string/logo_app"
        android:src="@drawable/img"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/confess_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:fontFamily="serif-monospace"
        android:text="@string/confesse_toi"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:fontFamily="serif-monospace"
        android:text="@string/inscription"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:drawableStart="@drawable/user_account"
        android:hint="@string/pseudo"
        android:inputType="text"
        android:textColorHint="@color/gray"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="269dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/mdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:drawableStart="@drawable/user_lock"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="407dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/birth"
        android:hint="@string/birth"
        android:inputType="datetime"
        android:textColorHint="@color/gray"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="342dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/mdp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:drawableStart="@drawable/user_lock"
        android:hint="@string/mdp_conf"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="473dp" />

    <Button
        android:id="@+id/inscrire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:text="@string/inscrire"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="647dp" />

    <Button
        android:id="@+id/connecter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:text="@string/connecter"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="576dp" />

</androidx.constraintlayout.widget.ConstraintLayout>