<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/font1_color"
    android:padding="20dp"
    >

    <!-- Revoir la mise en page de tout les pages XML avec l'emulateur-->
    <ImageView
        android:id="@+id/img_logo_app"
        android:layout_width="344dp"
        android:layout_height="230dp"
        android:contentDescription="@string/logo_app"
        android:src="@drawable/img"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="26dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/StarterText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:fontFamily="serif-monospace"
        android:text="@string/Descr_app"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="37sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="549dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="625dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>