<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/comment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommentActivity">

    <include layout="@layout/content_profil" />
    <!-- Revoir la mise en page de tout les pages XML avec l'emulateur-->

    <TextView
        android:layout_width="599dp"
        android:layout_height="1110dp"
        android:text="@string/desc"
        android:textSize="23dp"
        app:layout_constraintBaseline_toTopOf="@id/champs"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="140dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/champs"
        android:layout_width="410sp"
        android:layout_height="300dp"
        android:background="@color/gray"
        android:hint="@string/ecrivez_ici"
        android:inputType="text"
        android:paddingTop="67sp"
        tools:ignore="Autofill,MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="182dp" />
    <Button
        android:id="@+id/publier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/font1_color"
        android:text="@string/publier"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="625dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>